[package]
name = "limited_flow_covenant"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = { version = "2.1.0", features = ["rand"] }
hex-conservative = { version = "0.3.0", features = ["serde"] }
lazy_static = "1.5.0"
miniscript = {version = "12.3.0", features = ["serde", "rand", "compiler", "base64"]}
serde = { version = "1.0.217", features =  ["derive"] }
serde_json = "1.0.138"
